eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Overtime_Payments__c.object
<CustomObject>
    <fields>
        <fullName>Bonus_amount__c</fullName>
        <label>Bonus amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <label>Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_to_pay__c</fullName>
        <label>Month to pay</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Member</label>
        <referenceTo>Staff_Member__c</referenceTo>
        <relationshipLabel>Overtime/Payments</relationshipLabel>
        <relationshipName>Overtime_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standby_amount__c</fullName>
        <label>Standby amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sundays_Bank_Holidays__c</fullName>
        <label>Sundays &amp; Bank Holidays (x2)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_part_time_only__c</fullName>
        <label>Total additional hours (x1)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekends_Saturdays__c</fullName>
        <label>Weekends &amp; Saturdays (1.5)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Overtime/Payments</label>
    <nameField>
        <label>Overtime/Payments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Overtime/Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>